--- a/views/home/index.html
+++ b/views/home/index.html
@@ -55,6 +55,7 @@
                             </td>
                         </tr>
                     </tbody>
+                </table>
             </article>
         </section>
     </main>
