--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,13 +24,7 @@ body {
   background-color: var(--main-background-color);
   transition: all ease-in-out 500ms;
 }
-
-main {
-  width: 100%;
-  margin: auto;
-}
-
-h1 {
+body h1 {
   padding: 0;
   margin: 0;
   color: var(--h1-color);
@@ -39,20 +33,42 @@ h1 {
   letter-spacing: 5px;
   font-family: "BebasNeue-Regular", sans-serif;
 }
-h1 mark {
+body h1 mark {
   color: inherit;
   position: relative;
-  background: linear-gradient(120deg, rgba(255, 109, 51, 0.5) 0%, rgba(255, 109, 51, 0.5) 100%) no-repeat 0 80%;
+  background: linear-gradient(120deg, rgba(255, 109, 51, 0.75) 0%, rgba(255, 109, 51, 0.75) 100%) no-repeat 0 80%;
   background-size: 99% 10px;
 }
-
-h2 {
-  margin: 0 25px 0 25px;
+body h2 {
+  margin: 25px;
   padding: 0;
   color: var(--h2-color);
   font-size: 2rem;
   letter-spacing: 2.5px;
-  font-family: "BebasNeue-Regular", sans-serif;
+  font-family: "Open Sans", sans-serif;
+}
+
+body.light {
+  background-color: white;
+  transition: all ease-in-out 500ms;
+}
+body.light h1, body.light h2 {
+  color: #393545;
+}
+body.light h1 mark, body.light h2 mark {
+  background: linear-gradient(120deg, rgba(255, 198, 10, 0.75) 0%, rgba(255, 198, 10, 0.75) 100%) no-repeat 0 80%;
+  background-size: 99% 10px;
+}
+body.light tbody {
+  background-color: #393545;
+}
+body.light th {
+  color: white;
+}
+
+main {
+  width: 100%;
+  margin: auto;
 }
 
 /*************************
@@ -110,7 +126,7 @@ header {
 **************************/
 .section__container {
   width: 80%;
-  margin: auto;
+  margin: 50px auto 50px auto;
 }
 
 /*************************
@@ -126,7 +142,7 @@ header {
   margin: 25px 0 25px 0;
 }
 .table__container thead {
-  background-color: rgba(var(--color-mikado-yellow), 0.55);
+  background-color: rgba(var(--color-mikado-yellow), 0.6);
   height: 50px;
   font-size: 1.25rem;
   font-family: "Open Sans", sans-serif;
@@ -142,6 +158,7 @@ header {
   font-family: "Open Sans", sans-serif;
   letter-spacing: 1.5px;
   color: var(--main-background-color);
+  transition: all ease-in-out 500ms;
 }
 .table__container tbody th {
   width: 50%;
@@ -149,6 +166,15 @@ header {
 .table__container tbody td {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.btn__send {
+  background-color: white;
+  border-radius: 50%;
+}
+.btn__send i {
+  font-size: 20px;
 }
 
 /*************************
