--- a/views/home/index.html
+++ b/views/home/index.html
@@ -11,7 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <title>Color Display</title>
 </head>
-<body>
+<body class="">
     <header class="header">
         <nav class="navbar__container">
             <div id="darkMode" class="dark__mode"><i class='bx bxs-moon'></i></div>
@@ -21,7 +21,7 @@
         <section class="section__container">
             <h1><mark>Color Display Template</mark></h1>
             <article class="setting__container">
-                <h2>Setting</h2>
+                <h2>Configuration</h2>
                 <table class="table__container">
                     <thead>
                         <tr>
@@ -57,6 +57,9 @@
                     </tbody>
                 </table>
             </article>
+        </section>
+        <section class="section__container">
+            <h1><mark>Some Samples</mark></h1>
         </section>
     </main>
 
