--- a/views/home/index.html
+++ b/views/home/index.html
@@ -19,9 +19,9 @@
     </header>
     <main class="main__container">
         <section class="section__container">
-            <h1><mark>Color Display Template</mark></h1>
+            <h1 class="h1__title"><mark>Color Display Template</mark></h1>
             <article class="setting__container">
-                <h2>Configuration</h2>
+                <h2 class="h2__title">Configuration</h2>
                 <table class="table__container">
                     <thead>
                         <tr>
@@ -33,7 +33,7 @@
                         <tr>
                             <th>--main-background-color</th>
                             <td>
-                                <label><input type="text" class="p-form-text-alt p-form-no-validate" placeholder="Type your HEX code"></label>
+                                <label><input id="main-background-color" type="text" class="p-form-text-alt p-form-no-validate" placeholder="Type your HEX code"></label>
                             </td>
                         </tr>
                         <tr>
@@ -54,12 +54,36 @@
                                 <label><input type="text" class="p-form-text-alt p-form-no-validate" placeholder="Type your value"></label>
                             </td>
                         </tr>
+                        <tr>
+                            <th>--mark</th>
+                            <td>
+                                <label><input type="text" class="p-form-text-alt p-form-no-validate" placeholder="Type your value"></label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>--button-background-color</th>
+                            <td>
+                                <label><input type="text" class="p-form-text-alt p-form-no-validate" placeholder="Type your value"></label>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </article>
         </section>
         <section class="section__container">
-            <h1><mark>Some Samples</mark></h1>
+            <h1 class="h1__title"><mark>Some Samples</mark></h1>
+            <div class="text__presentation">
+                <h4>Sample</h4>
+                <h3>Sample</h3>
+                <h2>Sample</h2>
+                <h1>Sample</h1>
+            </div>
+            <div class="text__presentation">
+                <h4><mark>Sample</mark></h4>
+                <h3><mark>Sample</mark></h3>
+                <h2><mark>Sample</mark></h2>
+                <h1><mark>Sample</mark></h1>
+            </div>
         </section>
     </main>
 
