--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,19 +1,15 @@
-/*************************
-*       MAIN
-**************************/
 :root {
-  /* Main */
-  --main-background-color: #393545;
-  --header-background-color: #4C475C;
-  /* Buttons */
-  --button-background-color: white;
-  /* titles */
-  --h1-color: white;
-  --h2-color: white;
-  --hx-color: white;
-  /* table */
-  --tbody-tr-background-color: #4C475C;
-  /* colors */
+  /*          DARK MODE          */
+  --dark-main-bg-color: #393545;
+  --dark-header-bg-color: #4C475C;
+  --dark-hx-color: white;
+  --dark-tbody-tr-bg-color: white;
+  /*          LIGHT MODE          */
+  --light-main-bg-color: white;
+  --light-header-bg-color: #4C475C;
+  --light-hx-color: #393545;
+  --light-tbody-tr-bg-color: #4C475C;
+  /* Others */
   --color-mikado-yellow: 255, 198, 10;
   --color-independance: 76, 71, 92;
   --color-orange-crayola: 255, 109, 51;
@@ -24,7 +20,7 @@ body {
   padding: 0;
   width: 100%;
   overflow-x: hidden;
-  background-color: var(--main-background-color);
+  background-color: var(--dark-main-bg-color);
   transition: all ease-in-out 500ms;
 }
 body h1 mark, body h2 mark, body h3 mark, body h4 mark {
@@ -36,7 +32,7 @@ body h1 mark, body h2 mark, body h3 mark, body h4 mark {
 body .h1__title {
   padding: 0;
   margin: 0;
-  color: var(--h1-color);
+  color: var(--dark-hx-color);
   font-size: 3rem;
   text-align: center;
   letter-spacing: 5px;
@@ -45,25 +41,29 @@ body .h1__title {
 body .h2__title {
   margin: 25px;
   padding: 0;
-  color: var(--h2-color);
+  color: var(--dark-hx-color);
   font-size: 1.5rem;
   letter-spacing: 2.5px;
   font-family: "Open Sans", sans-serif;
 }
 
 body.light {
-  background-color: white;
+  background-color: var(--light-main-bg-color);
   transition: all ease-in-out 500ms;
 }
-body.light h1, body.light h2, body.light h3, body.light h4 {
-  color: #393545;
+body.light main h1, body.light main h2, body.light main h3, body.light main h4 {
+  color: var(--light-hx-color);
 }
-body.light h1 mark, body.light h2 mark, body.light h3 mark, body.light h4 mark {
+body.light main h1 mark, body.light main h2 mark, body.light main h3 mark, body.light main h4 mark {
   background: linear-gradient(120deg, rgba(255, 198, 10, 0.75) 0%, rgba(255, 198, 10, 0.75) 100%) no-repeat 0 80%;
-  background-size: 99% 10px;
+  background-size: 100% 8px;
+}
+body.light #transition__footer {
+  fill: var(--light-main-bg-color);
+  transition: all ease-in-out 500ms;
 }
 body.light tbody {
-  background-color: var(--tbody-tr-background-color);
+  background-color: var(--light-tbody-tr-bg-color);
 }
 body.light th {
   color: white;
@@ -72,141 +72,6 @@ body.light th {
 main {
   width: 100%;
   margin: auto;
-}
-
-/*************************
-*       HEADER / NAVBAR
-**************************/
-header {
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  height: 100px;
-  background-color: var(--header-background-color);
-}
-
-.navbar__container {
-  width: 100%;
-  height: inherit;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  padding: 0 25px 0 25px;
-}
-
-/* dark__mode */
-.dark__mode {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50%;
-  width: 5%;
-}
-.dark__mode:hover {
-  cursor: pointer;
-}
-.dark__mode i {
-  font-size: 25px;
-  color: white;
-}
-.dark__mode i:hover {
-  opacity: 0.7;
-}
-
-/*************************
-*       MAIN
-**************************/
-.main__container {
-  margin: 50px 0 50px 0;
-}
-
-.setting__container {
-  margin: 25px 0 25px 0;
-}
-
-/*************************
-*       SECTION
-**************************/
-.section__container {
-  width: 80%;
-  margin: 50px auto 50px auto;
-}
-
-/*************************
-*       TABLE
-**************************/
-.table__container {
-  border-collapse: collapse;
-  background: white;
-  border-radius: 5px;
-  overflow: hidden;
-  width: 100%;
-  position: relative;
-  margin: 25px 0 25px 0;
-}
-.table__container thead {
-  background-color: rgba(var(--color-mikado-yellow), 0.6);
-  height: 50px;
-  font-size: 1.25rem;
-  font-family: "Open Sans", sans-serif;
-  letter-spacing: 1.5px;
-  color: var(--main-background-color);
-}
-.table__container thead th {
-  width: 50%;
-}
-.table__container tbody {
-  height: 50px;
-  font-size: 1rem;
-  font-family: "Open Sans", sans-serif;
-  letter-spacing: 1.5px;
-  color: var(--main-background-color);
-  transition: all ease-in-out 500ms;
-}
-.table__container tbody th {
-  width: 50%;
-}
-.table__container tbody td {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn__send {
-  background-color: white;
-  border-radius: 50%;
-}
-.btn__send i {
-  font-size: 20px;
-}
-
-/*************************
-*       SAMPLE
-**************************/
-.text__presentation {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  font-family: "Open Sans", sans-serif;
-  color: white;
-  margin: 50px;
-}
-.text__presentation h1, .text__presentation h2, .text__presentation h3, .text__presentation h4 {
-  margin: 0;
-  padding: 0;
-}
-.text__presentation h1 {
-  font-size: 2.5rem;
-}
-.text__presentation h2 {
-  font-size: 2rem;
-}
-.text__presentation h3 {
-  font-size: 1.5rem;
-}
-.text__presentation h4 {
-  font-size: 1rem;
 }
 
 /*************************
