--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -11,9 +11,12 @@
 
   // Title
   --dark-hx-color: white;
+  --dark-p-color: wheat;
 
   // Table
   --dark-tbody-tr-bg-color: white;
+
+
 
 
   /*          LIGHT MODE          */
@@ -44,6 +47,8 @@ body {
   transition: all ease-in-out 500ms;
 
   h1, h2, h3, h4 {
+    color: var(--dark-hx-color);
+    transition: all ease-in-out 500ms;
     mark {
       color: inherit;
       position: relative;
@@ -80,6 +85,7 @@ body.light {
   main {
     h1, h2, h3, h4 {
       color: var(--light-hx-color);
+      transition: all ease-in-out 500ms;
       mark {
         background: linear-gradient(120deg, rgba(255, 198, 10, 0.75) 0%, rgba(255, 198, 10, 0.75) 100%) no-repeat 0 80%;
         background-size: 100% 8px;
