--- a/public/css/footer.scss
+++ b/public/css/footer.scss
@@ -8,6 +8,7 @@
 
   #transition__footer {
     transition: all ease-in-out 500ms;
+    fill: var(--dark-main-bg-color);
   }
 
   background-color: var(--dark-header-bg-color);
