🌠 Update - Add Some responsive designs

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,12 @@
   --light-header-bg-color: #4C475C;
   --light-hx-color: #393545;
   --light-tbody-tr-bg-color: #4C475C;
+  /* responsive */
+  --fs-xxl: 3rem;
+  --fs-xl: 2.5rem;
+  --fs-l: 2rem;
+  --fs-m: 1.5rem;
+  --fs-s: 1rem;
   /* Others */
   --color-mikado-yellow: 255, 198, 10;
   --color-independance: 76, 71, 92;
@@ -38,7 +44,7 @@ body .h1__title {
   padding: 0;
   margin: 0;
   color: var(--dark-hx-color);
-  font-size: 3rem;
+  font-size: var(--fs-xl);
   text-align: center;
   letter-spacing: 5px;
   font-family: "Open Sans", sans-serif;
@@ -47,7 +53,7 @@ body .h2__title {
   margin: 25px;
   padding: 0;
   color: var(--dark-hx-color);
-  font-size: 1.5rem;
+  font-size: var(--fs-l);
   letter-spacing: 2.5px;
   font-family: "Open Sans", sans-serif;
 }
@@ -80,6 +86,26 @@ main {
   margin: auto;
 }
 
+@media (max-width: 40rem) {
+  :root {
+    --fs-xxl: 2.25rem;
+    --fs-xl: 1.75rem;
+    --fs-l: 1.5rem;
+    --fs-m: 1.25rem;
+    --fs-s: 1rem;
+  }
+
+  .title__presentation {
+    flex-direction: column;
+  }
+  .title__presentation h1, .title__presentation h2, .title__presentation h3, .title__presentation h4 {
+    margin: 10px 0 10px 0;
+  }
+
+  tbody input[type=text] {
+    visibility: hidden;
+  }
+}
 /*************************
 *       FONTS
 **************************/
