--- a/views/home/index.html
+++ b/views/home/index.html
@@ -84,17 +84,26 @@
         </section>
         <section class="section__container">
             <h1 class="h1__title"><mark>Some Samples</mark></h1>
-            <div class="text__presentation">
+            <div class="title__presentation">
                 <h4>Sample</h4>
                 <h3>Sample</h3>
                 <h2>Sample</h2>
                 <h1>Sample</h1>
             </div>
-            <div class="text__presentation">
+            <div class="title__presentation">
                 <h4><mark>Sample</mark></h4>
                 <h3><mark>Sample</mark></h3>
                 <h2><mark>Sample</mark></h2>
                 <h1><mark>Sample</mark></h1>
+            </div>
+            <div class="text__presentation">
+                <p></p>
+            </div>
+            <div class="button__presentation">
+                <button>Sample</button>
+                <button>Sample</button>
+                <button>Sample</button>
+                <button>Sample</button>
             </div>
         </section>
     </main>
